--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=https://mu3lnen.com/api
-NEXT_PUBLIC_SITE_URL=https://mu3lnen.com
+NEXT_PUBLIC_API_URL=https://Revolv36t.com/api
+NEXT_PUBLIC_SITE_URL=https://Revolv36t.com
